# msurf

./: .gitignore  MP4Writer.py  Makefile  bignum.c  display.py  mandelbrot.py  mandelbrot.py.orig  numpy_examples.py  requirements.txt  setup.cfg  setup.py
include/: bignum.h  bignum_test_framework.h  tfm_opencl.h
lib/: MandelbrotFuncs.py  MandelbrotParams.py  MandlebrotFuncs.py  mandelbrot_kernel.cl
src/c/: bignum.c  tfm_opencl.c
src/python/msurf/: MandelbrotFuncs.py  MandelbrotParams.py  display.py  mandelbrot_kernel.cl  mandelbrot_kernel_dblfloat.cl  mandelbrot_kernel_tfm.cl  numpy_mandelbrot.py  tfm_pywrapper.py
tests/c/: test_bignum.c  test_mandelbrot_tfm.c  test_tfm.c
