[flake8]
max-line-length = 120
ignore = [ E265, E226, E261, E303, E306, E231, E305 ]

[metadata]
name = msurf
version = 0.1.0
author = Rob Lucier
author_email = robertlucier@gmail.com
description = A package for Mandelbrot set visualization using TKInter and OpenCL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/treebbb/msurf  # Assuming you have a GitHub repo
license = Public Domain  # or another license

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    pillow
    pyopencl

[options.packages.find]
where = src/python

[options.package_data]
msurf = *.cl, *.py

[options.entry_points]
console_scripts =
    msurf = msurf.display:main

[options.extras_require]
dev =
    pytest
    black